# weather-data-infrastructure

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose - old.yml  docker-compose.yml
projet8_dbt/: Dockerfile  README.md  dbt_project.yml
projet8_dbt/data/: convert_weatherug.py  extract_infoclimat_observations.py  extract_infoclimat_stations.py
projet8_dbt/macros/: generate_schema_name.sql
projet8_dbt/models/: sources.yml
projet8_dbt/models/marts/: dim_weather_stations.sql  fact_weather_observations.sql  schema.yml
projet8_dbt/models/staging/: schema.yml  stg_infoclimat_observations.sql  stg_infoclimat_stations.sql  stg_weatherug_observations.sql  stg_weatherug_stations.sql
