[project]
name = "projet-08"
version = "0.1.0"
description = "OC-DE-Projet 08"
authors = [
    {name = "Eric Ginez",email = "eric.ginez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-postgres (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
